--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>iphone</title>
-<<<<<<< HEAD
+<head>
+
+
+
+  
   <link rel="stylesheet" href="myStyle.css">
 </head>
 <body>
